<resources>
    <string name="app_name">TourApp</string>
    <string name="start_button_label">Log in</string>
    <string name="sing_up_button_label">Sing Up</string>
    <string name="name_text_label">Enter Your Name</string>
    <string name="pass_text_label">Enter Your Password</string>
    <string name="package_name_text_label">Package Name</string>
    <string name="transport_text_label">Transport</string>
    <string name="duration_text_label">Duration</string>
    <string name="price_text_label">Price</string>
    <string name="buy_button_label">Buy</string>
    <string name="buy_button_label_template">Buy %1$d</string>
    <string name="available_money">available money</string>
    <string name="logged_out_toast">Logged out!</string>
    <string name="no_one_is_logged_in_toast">No one is logged in!</string>
    <string name="start_buying_empty_history">Start buying!</string>
    <string name="duration_days">Duration: %1$s days</string>
    <string name="price">Price: $%1$s</string>
    <string name="amount">$ %1$s</string>
    <string name="welcome">WELCOME</string>
    <string name="log_in_to_continue">Log in to continue</string>

</resources>